# phishing-detector

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mlflow.db-journal  pyproject.toml
app/: _bootstrap.py  _mlflow_panel.py  streamlit_app.py
app/pages/: 1_Explore.py  2_Importance.py  3_Train_and_Compare.py  4_Inference.py
best_params/: 0792d4681d09ab4c.json  08b0caba87e169ba.json  33505f4d1a365262.json  5c9013d50abc08f2.json  5ed9513cd16b7615.json  65fe17207054c6e2.json  7b3181693a33a732.json  8774d914e616b04a.json  925f6c1fee38d815.json  afb1b429472403e0.json  c2bf9378c5384182.json  dd7878fca568cbac.json  e094639848a84bb9.json  f569abea406588f4.json
docs/: DESIGN.md  EXPERIMENT_JOURNEY.md  ML_STACK.md  Next_Steps.md  RESULTS.md  colab_experiments.ipynb
fastapi_app/: README.md  __init__.py  auth.py  main.py  schemas.py
fastapi_app/routers/: health.py  predict.py
fastapi_app/tests/: conftest.py  test_auth.py  test_health.py  test_model_version_selection.py  test_predict.py
scripts/: best_model_report.py  cli.py  embedding_arch_sweep.py  embedding_experiment.py  experiment_top3.py  make_sample_data.py  per_model_embedding.py  run_experiments.py
src/phishing/: __init__.py
src/phishing/core/: __init__.py  blend_model.py  blending.py  data.py  dataset.py  embedding_cache.py  metrics.py  param_cache.py  persistence.py  splits.py  stacking.py  thresholding.py  wrapper.py
src/phishing/experiments/: __init__.py  runner.py
src/phishing/features/: __init__.py  autoencoder.py  binning.py  (+7 more)
tests/: conftest.py  test_smoke.py
(+21 files in other folders)
