[project]
name = "phishing-detection"
version = "0.1.0"
description = "Validation framework for phishing-detection algorithms on a highly imbalanced dataset"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.40",
    "scikit-learn>=1.5",
    "imbalanced-learn>=0.13",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "optbinning>=0.21",
    "joblib>=1.4",
    "mlflow>=2.18",
    "pandas>=2.2",
    "numpy>=2.1",
    "matplotlib>=3.9",
    "scipy>=1.14",
    "tensorflow>=2.16,<2.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "fastapi_app/tests"]
